Fixed pull to refresh trigger on mobiles

--- a/ui/apps/themes/components/listview.less
+++ b/ui/apps/themes/components/listview.less
@@ -320,7 +320,7 @@
     .pull-to-refresh {
         position: absolute;
         top: 8px;
-        z-index: 3;
+        z-index: 10001;
         width: 100%;
         .spinner {
             width: 50px;
@@ -332,6 +332,7 @@
             color: #fff;
             font-size: 24px;
             margin: 0 auto;
+            .elevation-1();
         }
     }
     .scale-down {
